--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <ul>
     <li id="first">My school</li>
-    <li>My mum</li>
+    <li>My Dad</li>
     <li>My love</li>
     </ul>
     <ol type="1">
